[gd_scene load_steps=13 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://backdrop2.png" type="Texture" id=2]
[ext_resource path="res://fonts/bahnschrift.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://text_theme.tres" type="Theme" id=4]
[ext_resource path="res://button_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.239216, 0.87451, 0.87451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.239216, 0.74902, 0.87451, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.956863, 0.709804, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.937255, 0.501961, 0.972549, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.239216, 0.87451, 0.87451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.239216, 0.74902, 0.87451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.545098, 0.27451, 0.678431, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=5]
ItemList/colors/font_color = Color( 0.815686, 0.933333, 0.929412, 1 )
ItemList/colors/font_color_selected = Color( 0, 0, 0, 1 )
ItemList/colors/guide_color = Color( 0.239216, 0.74902, 0.87451, 1 )
ItemList/constants/hseparation = 0
ItemList/constants/icon_margin = 0
ItemList/constants/line_separation = 0
ItemList/constants/vseparation = 0
ItemList/fonts/font = null
ItemList/styles/bg = SubResource( 4 )
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null
VScrollBar/styles/grabber = SubResource( 6 )
VScrollBar/styles/grabber_highlight = SubResource( 7 )
VScrollBar/styles/grabber_pressed = SubResource( 8 )
VScrollBar/styles/scroll = SubResource( 9 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )
centered = false

[node name="Control" type="Control" parent="."]
margin_left = 312.0
margin_top = 100.0
margin_right = 712.0
margin_bottom = 400.0
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
rect_min_size = Vector2( 400, 200 )

[node name="Label4" type="Label" parent="Control/VBoxContainer"]
margin_right = 400.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Cr√®me de Menthe"
align = 1

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 46.0
text = "(a poetry collaboration tool"
align = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
margin_top = 50.0
margin_right = 400.0
margin_bottom = 87.0
text = "in its first iteration)
"
align = 1

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
margin_top = 91.0
margin_right = 400.0
margin_bottom = 108.0
text = "Click to select a source text:"
align = 1

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer"]
margin_top = 112.0
margin_right = 400.0
margin_bottom = 262.0
rect_min_size = Vector2( 400, 150 )
theme = SubResource( 5 )
items = [ "Andrew Weatherhead", null, false, "Lewis Carroll", null, false, "Sor Juana Inez de la Cruz", null, false, "[blank, enter your own text]", null, false ]
allow_reselect = true

[node name="StartButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 266.0
margin_right = 400.0
margin_bottom = 287.0
theme = ExtResource( 5 )
disabled = true
text = "Start..."

[connection signal="item_selected" from="Control/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="Control/VBoxContainer/ItemList" to="." method="_on_ItemList_nothing_selected"]
[connection signal="pressed" from="Control/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
